# CXX-Template

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: c-cpp.yml
lib/FakeIt/: fakeit.hpp
scripts/: build-all.sh  check-style.sh  install-catch2.sh
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  common.cpp  common.h  linear_cal.hpp
src/encoder/: encoder.hpp
src/fdm/: fdm.hpp
src/ringbuffer/: ringbuffer.hpp  ringcounter.hpp
test/: CMakeLists.txt  fdm_test.cpp  main_test.cpp  ringbuffer_test.cpp  ringcounter_test.cpp
